[gd_scene load_steps=4 format=3 uid="uid://b2cdgyauyl2s3"]

[ext_resource type="Script" path="res://cities/city.gd" id="1_wee8n"]
[ext_resource type="PackedScene" uid="uid://dqchrg6yhxkr5" path="res://player_marker/player_marker.tscn" id="2_5gm5g"]

[sub_resource type="BoxShape3D" id="BoxShape3D_migwx"]

[node name="City" type="Node3D"]
script = ExtResource("1_wee8n")

[node name="PlayerMarker" parent="." instance=ExtResource("2_5gm5g")]

[node name="StaticBody3D" type="Area3D" parent="."]
collision_layer = 32
collision_mask = 64

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3D"]
shape = SubResource("BoxShape3D_migwx")

[node name="Structures" type="Node3D" parent="."]

[connection signal="body_entered" from="StaticBody3D" to="." method="_on_static_body_3d_body_entered"]
[connection signal="body_exited" from="StaticBody3D" to="." method="_on_static_body_3d_body_exited"]
